# graphene_django_cruddals

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .ruff.toml  CODE_OF_CONDUCT (2).md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  optimeze.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy.yml  lint.yml  tests.yml
docs/: mkdocs.yml  requirements.txt
docs/docs/: about.md  basic-tutorial.md  index.md  step-by-step-installation.md  what-can-do.md
docs/drafts/: ES-what-can-do.md  Quick-start.md  anotations.txt  backlog.txt  complete-model-interface.md  cruddals-interface.md  internal-readme.md  readmedrafts.md  step-by-step-installation.md  what-can-do.md
examples/: django_test_settings.py
examples/restaurantProject/: data.json  manage.py  requirements.txt
graphene_django_cruddals/: __init__.py  decorators.py  main.py  python_types.py  registry_global.py  type_extensions.py  types.py  utils.py
graphene_django_cruddals/builders/: app_to_cruddals.py  model_to_cruddals.py  project_to_cruddals.py
graphene_django_cruddals/client/: build_functions.py
graphene_django_cruddals/converters/: compat.py  converter_filter_input.py  converter_input.py  converter_input_relation_nested.py  converter_order_by_input.py  converter_output.py  django_types.py  utils.py
graphene_django_cruddals/operations_fields/: default_resolvers.py  main.py  utils.py
tests/: apps.py  fragments.py  gql_response_graphene_django_crud.json  gql_response_with_queryset_factory_analyze.json  gql_response_without_queryset_factory_analyze.json.json  models.py  schema.py  signals.py  test_client_build_functions.py  test_converters_utils.py  test_main.py  test_n1_nested_paginated_comprehensive.py  test_n1_optimizations.py  test_perfomance.py  test_queryset_factory.py  test_queryset_factory_unit.py  test_registry_global.py  test_resolver_hints.py  test_resolvers_use_factory.py  test_utils.py  test_utils_main.py  test_utils_utils.py  test_views_file_upload_graphql_view.py  urls.py  utils.py
(+165 files in other folders)
